assets/css/style.css
.header {
  background-color: #4aaaa5;
  color: #ffffff;
  border-radius: 0px;
  font-size: 30px;
  font-family: Georgia, Times, "Times New Roman", serif;
}

.port {
  border-left: 1px solid #cccccc;
  border-right: 1px solid #cccccc;
}

.nav {
  margin-top: 20px;
  margin-bottom: 20px;
  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
}

.topper {
  border-bottom: 3px solid #cccccc;
  background-color: white;
  margin-bottom: 50px;
}

hr {
  border-bottom: 2px solid #cccccc;
  margin-bottom: 50px;
}

body {
  background-image: url("../images/crossline-dots.png");
  padding: 0px;
}

.footer {
  background-color: #666666;
  color: #cccccc;
  position: static;
  bottom: 0;
  left: 0;
  margin-top: 50px;
  border-top: 5px solid #4aaaa5;
  clear:both;
}

.content {
  background-color: white;
  border: 1px solid #cccccc;
  margin: auto;
  margin-top: 100px;
  margin-bottom: 300px;
}

.card-title {
  font-family: Georgia, "Times New Roman", Times, serif;
  font-weight: bold;
  color: #4aaaa5;
  padding: 10px;
  margin-top: 10px;
}

label {
  font-family: Arial, Helvetica, sans-serif;
  font-size: 25px;
  color: #777777;
}

.card-img {
  max-width: 300px;
  float: left;
  margin-right: 20px;
}

.card-text {
  font-size: 20px;
  font-family: Arial, Helvetica, sans-serif;
  color: #777777;
  line-height: 40px;
}

.thumb{
  display: block;
  margin: auto;
  padding: 10px;
}

html{
  position: static;
}

.banner{
  background-color: blue;
  display: block;
  height:50px;
  margin:auto;
  width: 60%;
  min-width: 60%;
  padding-top: 10px;
  text-align: center;
  background-color: #4aaaa5;
  position:  absolute;
  bottom: 75px;
  left: 20%;
  border-radius: 10px;
}

.thumbcontainer{
  position: relative;
}

img{
  max-width: 300px;
  max-height: 320px;
  min-height: 320px;
  border: 2px ridge #777777;
  border-radius: 10px;
}

a{
  text-decoration: blanchedalmond;
  font-weight: bold;
  font-size: 20px;
  color: #9ae9d5;
}

a:hover{
  text-decoration: none;
  color: #666666;
}

